--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/com/fpoly/db/Mydatabase.java=UTF-8
 encoding//src/com/fpoly/main/MainActivity.java=UTF-8
+encoding//src/com/fpoly/main/Number.java=UTF-8
